# tally

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
pkg/utils/: README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/counter/: mod.rs
src/discovery/: mod.rs
src/language/: definitions.rs  mod.rs
src/output/: mod.rs
src/runtime/: mod.rs
src/types/: mod.rs  report.rs
tests/: cli.rs  fixture_parity.rs
