[package]
name = "tally"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.4"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
comfy-table = "7.2.2"
ignore = "0.4.25"
memchr = "2.8.0"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = "deny"
clone-on-copy = "deny"
large-enum-variant = "deny"
needless-collect = "deny"
redundant-clone = "deny"

[dev-dependencies]
assert_cmd = "2.2.2"
tempfile = "3.27.0"
