[package]
name = "tally"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "tally"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.4"
ignore = "0.4.25"
memchr = "2.8.0"
rayon = "1.12.0"
thiserror = "2.0.18"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = "deny"
clone-on-copy = "deny"
large-enum-variant = "deny"
needless-collect = "deny"
redundant-clone = "deny"

[dev-dependencies]
tempfile = "3.27.0"
